added prop and tag

--- a/create.html
+++ b/create.html
@@ -360,8 +360,8 @@
 
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up" style="color:#ffffff">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down" style="color:#ffffff">→</button>
     <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
@@ -425,8 +425,8 @@ $("#add-led").on("click", addLedControl);
   <label>Value <input type="number" class="ctrl-num ctrl-value" value="0"></label>
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up" style="color:#ffffff">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down" style="color:#ffffff">→</button>
     <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
@@ -452,8 +452,8 @@ $("#add-led").on("click", addLedControl);
   <label>Text <input type="text" class="ctrl-text" value="LCD"></label>
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up" style="color:#ffffff">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down" style="color:#ffffff">→</button>
     <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
@@ -481,8 +481,8 @@ $("#add-led").on("click", addLedControl);
   <label>Selected <input type="text" class="ctrl-num ctrl-value" value="A"></label>
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up" style="color:#ffffff">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down" style="color:#ffffff">→</button>
     <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
