--- a/preset.html
+++ b/preset.html
@@ -277,11 +277,11 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 
 
-window.addEventListener("resize", () => {
-  if (window.innerWidth <= 768) {
-    applyZoom(); // re-apply safe zoom when orientation changes
-  }
-});
+// window.addEventListener("resize", () => {
+//   if (window.innerWidth <= 768) {
+//     applyZoom(); // re-apply safe zoom when orientation changes
+//   }
+// });
 </script>
 
 
