--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <div style="position: relative; margin-bottom: 10px;">
       <input type="password" id="password" placeholder="Password" required class="bx--text-input"
           style="width: 100%;" />
-      <button type="button" id="togglePassword" aria-label="Show password" 
-          style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); background: none; border: none; cursor: pointer;">
+      <button type="button" id="togglePassword" aria-label="Show password">
           <svg xmlns="http://www.w3.org/2000/svg" class="bx--icon" width="20" height="20" fill="currentColor" viewBox="0 0 32 32">
           <path d="M16,10a6,6,0,1,1-6,6A6,6,0,0,1,16,10Zm0-2C10.5,8,5.8,12,4,16c1.8,4,6.5,8,12,8s10.2-4,12-8C26.2,12,21.5,8,16,8Z"/>
         </svg>
