--- a/preset.html
+++ b/preset.html
@@ -113,7 +113,7 @@
 
 
 
-    <div class="zoom-controls" style="position: fixed; bottom: 20px; right: 20px; display: flex; gap: 8px; z-index: 9999;">
+    <div class="zoom-controls">
       <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M18 12L14 12 14 8 12 8 12 12 8 12 8 14 12 14 12 18 14 18 14 14 18 14 18 12z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
@@ -275,13 +275,6 @@ function hidePresetLoader() {
 document.addEventListener('DOMContentLoaded', () => {
   CarbonComponents.watch();
 });
-
-
-// window.addEventListener("resize", () => {
-//   if (window.innerWidth <= 768) {
-//     applyZoom(); // re-apply safe zoom when orientation changes
-//   }
-// });
 </script>
 
 
