test editmode flag

--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="style.css">
-    <script>window.editMode = true;</script>
+    <script>window.isEditMode = true;</script>
     <script src="utils.js"></script>
     <script src="create.js"></script>
     
