--- a/create.html
+++ b/create.html
@@ -113,7 +113,7 @@
                     <input type="checkbox" id="pedal-inside-full-check"> Full
                     </label>&ensp;&ensp;
 
-                    <label id="inside-border-label">
+                    <label id="pedal-inside-border-label">
                     Inside Border 
                     <input type="checkbox" id="pedal-inside-border-check">
                     <input type="color" id="pedal-inside-border" value="#000000">
