--- a/preset.html
+++ b/preset.html
@@ -166,14 +166,15 @@
       $('#loadingMessage').hide();
       $('#page-content').show();        // show the page
       $('#preset-controls').show();     // show controls
+
       if (typeof initNavPreset === 'function') initNavPreset();
       if (typeof initPreset === 'function') initPreset();
 
-      // disable save/create/add folder buttons
-      $('#savePstBtn, #savePstBtnMobile, #createPstBtn, #createPstBtnMobile, #addFolderBtn').prop('disabled', true).addClass('btn-disabled');
+      if (typeof initGuestMode === 'function') initGuestMode(); // <-- render local pedalboard
 
       return;
     }
+
 
 
     $.ajax({
