--- a/preset.html
+++ b/preset.html
@@ -165,7 +165,8 @@
       window.currentUser = null; // no user
       $('#loadingMessage').hide();
       $('#page-content').show();        // show the page
-      $('#preset-controls').show().html("Login to organise your Presets in folders and save them!");     // show controls
+      $('#preset-controls').show()     // show controls
+      $('#preset-controls').html("Login to organise your Presets in folders and save them!");
       if (typeof initNavPreset === 'function') initNavPreset();
       if (typeof initPreset === 'function') initPreset();
 
