--- a/splash.html
+++ b/splash.html
@@ -8,7 +8,7 @@
   <!-- Carbon Design System -->
   <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
   <!-- Your custom overrides -->
-  <link rel="stylesheet" href="script.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
