added img splash

--- a/splash.html
+++ b/splash.html
@@ -13,7 +13,7 @@
 <body>
 
   <!-- Hero / Splash -->
-  <main id="page-content" style="margin-top:100px; text-align:center;">
+  <main id="page-content" style="margin-top:100px; text-align:center; background-image:'logos/splash.png'">
     <h1 style="font-size:2.5rem; font-weight:700;">Save Your preset Tones Online</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
       Drag, drop, tweak, and save your own guitar & bass pedal setups.
