--- a/splash.html
+++ b/splash.html
@@ -13,13 +13,18 @@
 <body>
 
   <!-- Hero / Splash -->
-  <main id="page-content" style="margin-top:100px; text-align:center;">
+<main id="page-content" 
+      style="margin-top:100px; text-align:center;
+             background-image: url('logos/splash.png');
+             background-size: cover;
+             background-position: center;
+             min-height: 60vh; 
+             display: flex; flex-direction: column; justify-content: center; align-items: center;">
     <h1 style="font-size:2.5rem; font-weight:700;">Save Your preset Tones Online</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
       Drag, drop, tweak, and save your own guitar & bass pedal setups.
     </p>
 
-    <span style="background-image: url('logos/splash.png'); background-size: cover; background-position: center;"></span>
 
     <!-- CTA buttons -->
     <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
