--- a/splash.html
+++ b/splash.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PedalPlex – Build Your Pedalboard</title>
+  <title>PedalPlex</title>
 
   <!-- Carbon Design System -->
   <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
@@ -13,8 +13,8 @@
 <body>
 
   <!-- Hero / Splash -->
-  <main id="page-content" style="margin-top:100px; text-align:center;">
-    <h1 style="font-size:2.5rem; font-weight:700;">Save Your preset Tones Online</h1>
+  <main id="page-content" style="margin-top:50px; text-align:center;">
+    <h1 style="font-size:2.5rem; font-weight:700;">Save and Recall Your Pedal Presets Online</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
       Drag, drop, tweak, and save your own guitar & bass pedal setups.
     </p>
