--- a/profile.html
+++ b/profile.html
@@ -66,7 +66,7 @@
 
     const token = localStorage.getItem('authToken');
     if (!token) {
-      window.location.href = '/PedalPlex/';
+      window.location.href = 'login';
       return;
     }
 
@@ -91,7 +91,7 @@
         console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
           localStorage.removeItem('authToken');
-          window.location.href = '/PedalPlex/';
+          window.location.href = 'login';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
