--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@
     <div class="bx--row">
       <div class="bx--col">
         <h3>Create Pedalboards</h3>
-        <p>Arrange pedals with an easy drag-and-drop interface.</p>
+        <p>Arrange pedals to create a digital twin of your pedalboard.</p>
+        <p>Create as many pedalboards you want.</p>
       </div>
       <div class="bx--col">
         <h3>Save Presets</h3>
         <p>Store your knob and switch settings for instant recall.</p>
+        <p>Organise your riffs and songs in a folder structure.</p>
       </div>
       <div class="bx--col">
         <h3>Browse Catalog</h3>
         <p>Explore a growing library of pedals and effects.</p>
+        <p>Create your own pedals and amplifiers.</p>
       </div>
     </div>
   </section>
