--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="bx--row">
       <div class="bx--col">
         <h3>Create Pedalboards</h3>
-        <p>Arrange pedals to create a digital twin of your pedalboard.</p>
+        <p>Arrange pedals to create a digital twin of your setup.</p>
         <p>Create as many pedalboards you want.</p>
       </div>
       <div class="bx--col">
