--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
   <!-- Features -->
   <section class="bx--grid features" style="margin-top:4rem;">
+    <h2 style="font-size:2.2rem; font-weight:700;">Features</h2>
     <div class="bx--row">
       <div class="bx--col">
         <h3>Create Pedalboards</h3>
