--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <!-- Hero / Splash -->
   <main id="page-content" style="margin-top:20px; text-align:center; margin-bottom:50px;">
     <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
-    <h1 style="font-size:2.5rem; font-weight:700;">PedalPlex: because Your Tones deserve a Save button.</h1>
+    <h1 style="font-size:2.5rem; font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
-      Drag, drop, tweak, and save your own guitar & bass pedal setups.
+      Build, Tweak, Save your own Guitar & Bass setups - without limits.
     </p>
 
     <!-- CTA buttons -->
