--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </a>
         <a href="login" class="bx--btn bx--btn--primary" type="button" aria-label="Start Building"
             style="display: flex; align-items: center; gap: 0.5rem;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
               <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
-              <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>            
-              Login to Save
-            </svg>
+              <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
+          </svg>
+          Login to Save
         </a>
         <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Start Building"
             style="display: flex; align-items: center; gap: 0.5rem;">
