--- a/preset.html
+++ b/preset.html
@@ -98,7 +98,7 @@
 
     <br><br><br><br>
 
-    <div id="preset"></div>
+    <div id="preset" style="flex-direction: column; align-items: center;"></div>
   </div>
 
 
