test zoom level reflow

--- a/preset.html
+++ b/preset.html
@@ -17,6 +17,7 @@
   #preset {
     transition: transform 0.3s ease-in-out; /* smooth zoom */
     transform-origin: top left;
+    zoom: 1; /* default zoom level */
   }
 </style>
 
