--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
     <h1 style="font-size:2.25rem; font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
-      Build, Tweak, Save your own Guitar & Bass setups - without limits.
+      Build, Tweak, Save your own Guitar & Bass setups - for free and without limits.
     </p>
 
     <!-- CTA buttons -->
