test ui pedals in pedalboard page

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <style>
+    .pedal-catalog {
+      outline: 2px dashed #666;   /* dashed border around the pedal */
+      outline-offset: 2px;        /* space between pedal and dashed line */
+    }
+  </style>
 </head>
 <body>
   
