test dashed overlay

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -13,15 +13,24 @@
       outline-offset: 2px;        /* space between pedal and dashed line */
       position: relative;
     }
-    .pedal-catalog::before {
+    /* dashed overlay */
+    .pedal-catalog::after {
       content: "";
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      pointer-events: none;          /* so it doesn’t block clicks */
-      border: 2px dashed rgba(100, 100, 100, 0.7);  /* dashed overlay */
-      border-radius: 8px;            /* optional, match pedal corners */
-      box-sizing: border-box;
+      pointer-events: none; /* so it doesn’t block clicks */
+
+      /* repeating dashed pattern */
+      background-image: 
+        repeating-linear-gradient(
+          45deg,                  /* angle of dashes */
+          transparent,             /* gap start */
+          transparent 4px,         /* gap end */
+          rgba(0,0,0,0.3) 4px,    /* dash start */
+          rgba(0,0,0,0.3) 8px     /* dash end */
+        );
+      z-index: 10; /* in front */
     }
   </style>
 </head>
