apply zoom also on pedalboard page

--- a/preset.html
+++ b/preset.html
@@ -144,7 +144,7 @@
   <!-- Fallback content -->
   <div id="noPedalboardsContainer" style="display: none; text-align: center; margin-top: 7em;">
     <p style="font-size: 1.25em;">No pedalboards found.</p>
-    <a href="pedalboard.html" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Go to Pedalboards</a>
+    <a href="pedalboard.html" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Manage Pedalboard</a>
   </div>
 
   <!-- Scripts -->
