--- a/pedalboard.html
+++ b/pedalboard.html
@@ -126,7 +126,7 @@
       </button>
     </div>
 
-  <script src="zoom-preset.js"></script>
+  <script src="zoom.js"></script>
 
   <script>
   // Check user authentication
