--- a/preset.html
+++ b/preset.html
@@ -154,7 +154,7 @@
   <script src="fullscreen-menu.js"></script>
   <script src="folder.js"></script>
   <script src="nav-preset.js"></script>
-  <script src="zoom-preset.js"></script>
+  <script src="zoom.js"></script>
   
 
   <script>
