--- a/terms.html
+++ b/terms.html
@@ -10,8 +10,8 @@
 <body>
 
   <div style="margin-top:80px; max-width: 400px; margin-left: auto; margin-right: auto; text-align: center;">
-    <h2>404</h2>
-    <div id="catalog"></div>
+    <h2>Terms & Conditions</h2>
+    <p>Welcome to [Your App Name]! Please read these Terms & Conditions carefully before using the app. By using our services, you agree to these terms.</p>
     
   </div>
 
@@ -19,7 +19,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="utils.js"></script>
   <script src="fullscreen-menu.js"></script>
-  <script src="nav-404.js"></script>
+  <script src="nav.js"></script>
   <script src="404.js"></script>
 
   <script>
