--- a/terms.html
+++ b/terms.html
@@ -11,8 +11,84 @@
 
   <div style="margin-top:80px; max-width: 400px; margin-left: auto; margin-right: auto; text-align: center;">
     <h2>Terms & Conditions</h2>
-    <p>Welcome to [Your App Name]! Please read these Terms & Conditions carefully before using the app. By using our services, you agree to these terms.</p>
-    
+    <p>Effective date: Sept. 29, 2025</p>
+    <p>
+    Welcome to PedalPlex! Please read these Terms & Conditions carefully before using the app. 
+    By using our services, you agree to these terms.
+    </p>
+
+    <h3>1. Your Account</h3>
+    <p>
+    To use our app fully, you may need to create an account.
+    You are responsible for keeping your login credentials safe and secure.
+    You agree to provide accurate, current, and complete information when creating your account.
+    You must notify us immediately of any unauthorized use of your account.
+    </p>
+
+    <h3>2. User Content</h3>
+    <p>
+    You retain ownership of any content you create within the app, including pedalboards, presets, and related data.
+    By creating or uploading content, you grant PedalPlex a non-exclusive, worldwide, royalty-free license to store, display, and use your content in the app.
+    You agree not to upload content that is illegal, offensive, infringes third-party rights, or violates these Terms.
+    </p>
+
+    <h3>3. Third-Party Brands & Catalog</h3>
+    <p>
+    Our catalog includes gear from third-party brands such as Boss, Marshall, TC Electronic, Electro-Harmonix, Ibanez, and others.
+    All trademarks, product names, and images are property of their respective owners.
+    PedalPlex is not affiliated with, endorsed, or sponsored by these brands.
+    Users may not use brand names or logos for commercial purposes without proper authorization.
+    </p>
+
+    <h3>4. Prohibited Conduct</h3>
+    <p>
+    You may not:
+    Reverse-engineer, copy, or distribute the app or its catalog.
+    Sell, resell, or commercialize any content from the app without permission.
+    Harm, harass, or interfere with other users.
+    Violate any applicable laws or regulations.
+    </p>
+
+    <h3>5. Disclaimers</h3>
+    <p>
+    The app and its catalog are provided “as is” without warranties of any kind, whether express or implied.
+    We do not guarantee that all information in the catalog is accurate, complete, or up-to-date.
+    </p>
+
+    <h3>6. Limitation of Liability</h3>
+    <p>
+    We are not liable for any damages, losses, or errors resulting from your use of the app, including lost or corrupted presets, incorrect gear info, or technical issues.
+    </p>
+
+    <h3>7. GDPR Compliance</h3>
+    <p>
+    Your use of the app is governed by our Privacy Policy, which explains how we collect, process, and protect your personal data.
+    You may exercise your GDPR rights at any time by contacting us at any time via GitHub.
+    </p>
+
+    <h3>8. Account Termination</h3>
+    <p>
+    We may suspend or terminate your account if you violate these Terms.
+    You may delete your account at any time, and all your associated data will be removed permanently.
+    </p>
+
+    <h3>9. Changes to Terms</h3>
+    <p>
+    We may update these Terms from time to time.
+    Continued use of the app after updates constitutes acceptance of the new Terms.
+    </p>
+
+    <h3>10. Governing Law</h3>
+    <p>
+    These Terms are governed by the laws of Italy.
+    Any disputes arising from these Terms will be subject to the jurisdiction of Italian courts.
+    </p>
+
+    <h3>11. Contact Information</h3>
+    <p>
+    If you have any questions or concerns regarding these Terms, contact us via GitHub
+    </p>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
